[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61, 84.5 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:_velocity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "attkH"

[sub_resource type="Animation" id=19]
resource_name = "attkL"

[sub_resource type="Animation" id=20]
resource_name = "attkS"

[sub_resource type="Animation" id=21]
resource_name = "attkW"

[sub_resource type="Animation" id=12]
resource_name = "dashL"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:_velocity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2000, 0 ), Vector2( -2000, 0 ), Vector2( -1000, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "dashR"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:_velocity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2000, 0 ), Vector2( 2000, 0 ), Vector2( 1000, 0 ) ]
}

[sub_resource type="AudioStreamRandomPitch" id=2]

[sub_resource type="AudioStreamRandomPitch" id=3]

[sub_resource type="AudioStreamRandomPitch" id=4]

[sub_resource type="AudioStreamRandomPitch" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 62, 85.5 )

[sub_resource type="GDScript" id=14]
script/source = "extends Area2D

var flipped

func _input(event):
	if Input.is_action_just_pressed(\"left\") and !flipped:
		scale.x *= -1
		flipped = true
	if Input.is_action_just_pressed(\"right\") and flipped:
		scale.x *= -1
		flipped = false
"

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 44.5, 10 )

[sub_resource type="GDScript" id=15]
script/source = "extends Area2D

var flipped

func _input(event):
	if Input.is_action_just_pressed(\"left\") and !flipped:
		scale.x *= -1
		flipped = true
	if Input.is_action_just_pressed(\"right\") and flipped:
		scale.x *= -1
		flipped = false
"

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 85.75, 10 )

[sub_resource type="GDScript" id=16]
script/source = "extends Area2D

var flipped

func _input(event):
	if Input.is_action_just_pressed(\"left\") and !flipped:
		scale.x *= -1
		flipped = true
	if Input.is_action_just_pressed(\"right\") and flipped:
		scale.x *= -1
		flipped = false
"

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.5, 53 )

[sub_resource type="GDScript" id=17]
script/source = "extends Area2D

var flipped

func _input(event):
	if Input.is_action_just_pressed(\"left\") and !flipped:
		scale.x *= -1
		flipped = true
	if Input.is_action_just_pressed(\"right\") and flipped:
		scale.x *= -1
		flipped = false
"

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 42.125, 12.75 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 20
script = ExtResource( 1 )

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -85.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -155 )
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.03
drag_margin_right = 0.03

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( -1, -85 )
scale = Vector2( 2.648, 2.648 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/attkH = SubResource( 18 )
anims/attkL = SubResource( 19 )
anims/attkS = SubResource( 20 )
anims/attkW = SubResource( 21 )
anims/dashL = SubResource( 12 )
anims/dashR = SubResource( 13 )

[node name="SFX" type="Node" parent="."]

[node name="LanceAttack" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource( 2 )

[node name="SwordAttack" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource( 3 )

[node name="HammerAttack" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource( 4 )

[node name="WhipAttack" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource( 5 )

[node name="Dash" type="AudioStreamPlayer" parent="SFX"]

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]

[node name="Dead" type="AudioStreamPlayer" parent="SFX"]

[node name="HitDetector" type="Area2D" parent="."]
monitorable = false

[node name="HitShape" type="CollisionShape2D" parent="HitDetector"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, -85.5 )
shape = SubResource( 6 )

[node name="SwordHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false
script = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitbox"]
position = Vector2( 104, -82 )
shape = SubResource( 10 )

[node name="LanceHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false
script = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LanceHitbox"]
position = Vector2( 146, -58 )
shape = SubResource( 9 )

[node name="WhipHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false
script = SubResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WhipHitbox"]
position = Vector2( 80, -80 )
shape = SubResource( 8 )

[node name="HammerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
input_pickable = false
monitoring = false
monitorable = false
script = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HammerHitbox"]
position = Vector2( 103.875, -106 )
shape = SubResource( 7 )
